Recipes for Chicken Parmesan Pasta and Recipe for Spicy Chicken Tacquitos

--- a/recipes/flautas.html
+++ b/recipes/flautas.html
@@ -8,5 +8,36 @@
 </head>
 <body>
     <h1>Chicken Flautas</h1>
+    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/chickenflautas1-1646065889.jpg?crop=1.00xw:1.00xh;0,0&resize=768:*" alt="Chicken Flautas">
+    
+    <h2><strong>Description</strong></h2>
+    <p>From burritos to quesadillas, you really can’t go wrong with chicken wrapped in a tortilla! Flautas are our new favorite obsession. 
+        Made with shredded chicken wrapped in flour tortillas and then pan-fried, they’re somewhere between taquitos and chimichangas. 
+        They come together quickly, making them perfect party appetizers or a great weeknight meal served with Mexican rice and beans. 
+
+        The really great thing about these is how versatile they are. 
+        You can use rotisserie chicken, cheddar, and queso blanco like we have here, or change it up with what you prefer or have at home. 
+        We’ve added flavor and spice with the addition of canned green chiles, but you can use salsa or pickled jalapenos instead. 
+        You could also use a different combination of cheeses such as Monterey jack, pepper jack, Oaxaca, or feta. 
+        For a variation, try shredded pork instead of chicken. </p>
+        <h3><strong>Ingredients</strong></h3>
+        <ul>
+            <li>2 c. shredded, cooked chicken</li>
+            <li>1/4 c. canned, chopped green chiles </li>
+            <li>1 c. shredded cheddar </li>
+            <li>1 c. queso blanco (or crumbled feta)</li>
+            <li>1/2 tsp. kosher salt (omit if chicken is already seasoned)</li>
+            <li>2 tsp. hot sauce, optional</li>
+            <li>10 7" flour tortillas</li>
+            <li>1/2 c. vegetable, canola, or other neutral oil</li>
+            <li>For serving: pico de gallo, sour cream, and guacamole</li>
+        </ul>
+        <h4><strong>Steps</strong></h4>
+        <ol>
+            <li>In a large bowl, combine chicken, chiles, cheeses, salt, and hot sauce (if using).</li>
+            <li>Lay 1 tortilla down on a work surface. Spread a heaping 1/4 cup of the chicken mixture onto the bottom third of the tortilla. Roll up tightly and place seam side down on a plate. Repeat with remaining tortillas and filling.</li>
+            <li>In a 10” skillet, heat oil over medium-high heat until the temperature reaches between 350-375 degrees F. (You want to hear a sizzle as soon as the food hits the oil.)</li>
+            <li>Add 3 of the flautas to the oil, seam side down. Cook, turning every 30 to 60 seconds, until golden all over, about 2 to 3 minutes. Transfer flautas to a large paper towel-lined plate or baking sheet. Repeat with remaining flautas. Serve immediately with pico de gallo, sour cream, and guacamole.</li>
+        </ol>
 </body>
 </html>
